fixup removed unnecessary z-index

--- a/src/scss/components/multi-menu/_multi-menu.scss
+++ b/src/scss/components/multi-menu/_multi-menu.scss
@@ -274,7 +274,6 @@
     @include grid-media('lg') {
 
       > .su-multi-menu__item {
-        z-index: 102;
 
         > .su-multi-menu__link {
 
